src/index.css
:root {
  --c-text: #423f3f;
  --c-primary: #1967d2;
  --c-background-alt: #f7eff5;
  --c-background-design: #191515;
  --c-background-design-alt: #292121;
  --c-background-design-accent: #a35151;
  --c-background-design-accent-hover: #b43838;
  --font-family: "Outfit", Roboto, Helvetica, Arial, sans-serif;
  --radius: 28px;
  --radius-small: 4px;
}

@media (prefers-reduced-motion) {
  *,
  ::before,
  ::after {
    animation: none !important;
  }
}

*,
::before,
::after {
  box-sizing: border-box;
  padding: 0;
  margin: 0;
}

* {
  transition: all 0.17s ease-out;
}

html {
  font-size: 16px;
}

@media screen and (max-width: 1000px) {
  html {
    font-size: 15px;
  }
}

body {
  color: var(--c-text);
  background: #fff;
  font-family: "Outfit", Roboto, Helvetica, Arial, sans-serif;
  font-optical-sizing: auto;
  font-style: normal;
}

button {
  font-family: var(--font-family);
  color: var(--c-text);
  background: var(--c-primary);
  border-radius: var(--radius-small);
  color: #fff;
  border: none;
  padding: 0.75rem 1.5rem;
  cursor: pointer;
}

button:hover {
  background-color: #3e7fd9;
}

a {
  color: var(--c-primary);
  text-decoration: none;
}

a:hover {
  text-decoration: underline;
}

section {
  padding: 2rem;
}

.section-title {
  font-size: 2.5rem;
  margin-top: 5rem;
  margin-bottom: 2.5rem;
  font-weight: 600 !important;
  text-align: center;
}

@media screen and (max-width: 1000px) {
  .section-title {
    font-size: 1.75rem;
    margin-top: 2rem;
  }
}

.limited-width-big {
  margin: 0 auto;
  padding: 1rem;
  max-width: 1440px;
}

.limited-width {
  margin: 0 auto;
  padding: 1rem;
  max-width: 1200px;
}

@media screen and (max-width: 1000px) {
  .limited-width {
    margin: 0 auto;
    padding: 1rem;
    max-width: 500px;
  }
}

.bg-product {
  background-color: #f7eff5;
}

.bg-product-darker {
  background-color: #dfd2db;
}

/* grabbed off the gemini site */
.gemini-text {
  display: inline-block;
  color: transparent;
  background: linear-gradient(
    74deg,
    rgb(66, 133, 244) 0px,
    rgb(155, 114, 203) 9%,
    rgb(217, 101, 112) 20%,
    rgb(217, 101, 112) 24%,
    rgb(155, 114, 203) 35%,
    rgb(66, 133, 244) 44%,
    rgb(155, 114, 203) 50%,
    rgb(217, 101, 112) 56%,
    rgb(27, 28, 29) 75%,
    rgb(27, 28, 29) 100%
  );
  background-size: 400% 100%;
  background-clip: text;
  -webkit-background-clip: text;
  -webkit-text-fill-color: transparent;
}

/* root wrapper styles */

/* bunch of drilling so the me image appears over the main content scrollbar */
html,
body,
#root,
.page-wrapper,
.design-commentary-wrapper,
.design-content {
  width: 100%;
  height: 100%;
}

.page-wrapper {
  display: flex;
}

.page-wrapper main {
  flex-grow: 1;
  overflow-y: scroll;
  padding-bottom: 4rem;
  z-index: 10;
}

.design-commentary-wrapper {
  width: 35%;
  z-index: 100;
  padding: 0;
  font-size: 1.15rem;
}

.design-commentary-wrapper .design-content {
  overflow-y: scroll;
  padding: 2rem 3rem;
}

.design-commentary-wrapper.closed {
  width: 0;
  padding: 0;
}

.design-commentary-wrapper.closed .meWrapper {
  opacity: 0;
}

.design-commentary-wrapper.closed .design-content {
  padding: 0;
}

@media screen and (max-width: 1550px) {
  .design-commentary-wrapper {
    width: 55%;
  }
}

/* @media screen and (max-width: 1350px) {
  .design-commentary-wrapper {
    width: 65%;
  }
} */

/* mobile */
@media screen and (max-width: 1300px) {
  .page-wrapper {
    flex-direction: column;
  }

  .design-commentary-wrapper {
    width: 100%;
    height: 40%;
    border-top-left-radius: 10px;
    border-top-right-radius: 10px;
  }

  .design-commentary-wrapper.closed {
    width: 100%;
    height: 0;
  }
}

/* actual design panel styles */

.design-commentary-wrapper {
  background-color: var(--c-background-design);
  color: #fde6e6;
  position: relative;
}

.design-commentary-wrapper .design-content section {
  padding: 0;
  display: flex;
  flex-direction: column;
  gap: 1rem;
  margin-bottom: 8rem;
}

.design-commentary-wrapper .section-title {
  z-index: 100;
  margin: 0;
  font-size: 1.75rem;
  text-align: left;
}

.design-commentary-wrapper img {
  max-width: 100%;
}

.design-commentary-wrapper details {
  background-color: var(--c-background-design-alt);
  padding: 2rem;
  border-radius: var(--radius);
}

.design-commentary-wrapper details p {
  margin-bottom: 1rem;
}

.design-commentary-wrapper figure {
  margin-top: 2rem;
  margin-bottom: 2rem;
}

.design-commentary-wrapper figcaption {
  text-align: center;
  font-style: italic;
  margin-top: 0.5rem;
}

.design-commentary-wrapper summary {
  cursor: pointer;
}

.design-commentary-wrapper details[open] summary {
  margin-bottom: 1rem;
}

.design-commentary-wrapper blockquote {
  position: relative;
}

.design-commentary-wrapper blockquote::before {
  content: " ";
  background-color: var(--c-background-design-accent);
  width: 3px;
  height: 100%;
  display: block;
  position: absolute;
  left: -15px;
  border-radius: 20px;
}

.design-commentary-wrapper li::marker {
  color: var(--c-background-design-accent);
}

.design-commentary-wrapper li {
  margin-bottom: 0.5rem;
}

.design-commentary-wrapper a {
  color: #ff3e3e;
}

/* https://stackoverflow.com/questions/6794000/fixed-position-but-relative-to-container/11833892#11833892 */
.meWrapper {
  --image-size: 2.5rem;
  --stub-width: 15px;
  --padding: 5px;
  opacity: 1;

  position: absolute;
  top: 1.5rem;
  left: calc((var(--image-size) * -1) - var(--stub-width) - var(--padding));
  z-index: 20;
}

.meWrapper .stub {
  height: 20px;
  width: var(--stub-width);
  clip-path: polygon(0 50%, 100% 100%, 100% 0);
  background: var(--c-background-design);

  z-index: 1000;
  position: absolute;
  right: calc((var(--stub-width) * -1) - var(--padding));
  bottom: 0.5rem;
}

.meWrapper img {
  width: var(--image-size);
  height: var(--image-size);
  z-index: 500;
  display: block;
  border-radius: 100px;
  border: 5px solid var(--c-background-design);
}

